Adding new image

--- a/index.css
+++ b/index.css
@@ -13,3 +13,10 @@ div > .img{
     width: 100px;
     height: 200px;
 }
+
+div > .logo{
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    
+}
